api/kubernetes/overlays/prod/mongodb-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: harborseal
spec:
  template:
    spec:
      containers:
      - name: mongodb
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
